@@ -152,8 +152,10 @@ endif
 ;=====================================
 handle_box:
     ; Check if the box has finished expanding/shrinking.
-    ldx $1B88|!addr
-
+    ldx #$00
+    lda !ram_prompt_phase : cmp #$01 : beq +
+    inx
++
     ; If we shouldn't show the box, then just go to the next phase immediately.
     lda !ram_disable_box : bne +
     lda $1B89|!addr : cmp.l .size,x : bne .not_finished
@@ -165,9 +167,6 @@ handle_box:
     txa : beq .finished_expanding
 
 .finished_shrinking:
-    ; Reset shrinking flag.
-    stz $1B88|!addr
-
     ; If the box is enabled, reset the screen settings and disable windowing.
     lda !ram_disable_box : bne +
     stz $41
@@ -179,9 +178,6 @@ handle_box:
     rts
 
 .finished_expanding:
-    ; Go to the next box phase.
-    inc $1B88|!addr
-
     ; Reset cursor counters.
     stz $1B91|!addr
     stz $1B92|!addr
